fixed issue with download button on show page jumping up and down

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1946,7 +1946,7 @@ fieldset.toy_shared {
     opacity: 70% !important;
     transition: 0.3s;
     background: none;
-    top: -0.07em;
+    top: 1.0em;
 }
 
 .downloadthis-inline-download-buttons {
